--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/bbpardo/express-final-proyect#readme",
   "dependencies": {
     "express": "^4.18.0",
-    "jsonschema": "^1.4.0"
+    "jsonschema": "^1.4.0",
+    "sqlite3": "^5.0.6"
   }
 }
